--- a/src/style/scss/var.scss
+++ b/src/style/scss/var.scss
@@ -1,7 +1,13 @@
 // 布局区域的背景颜色
-$headerBg: #f8b195;
-$mainBg: #f67280;
+$headerBg: #1c1c21;
+$mainBg: #fff;
 $footerBg: #204051;
 
 
 /** border style */
+
+
+
+// size
+$appSidebarContentWidth: 200px;
+$appSidebarEditorWidth: 260px;
